[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/Potion.png" type="Texture" id=2]
[ext_resource path="res://UI/Timer.gd" type="Script" id=3]
[ext_resource path="res://fonts/SpaceGrotesk-VariableFont_wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/deaths.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.121569, 0.596078, 0.14902, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0509804, 0.129412, 0.372549, 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="StatsContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -3.0

[node name="HpProgress1" type="ProgressBar" parent="StatsContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 6.0
margin_right = -770.0
margin_bottom = -571.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="HpText" type="Label" parent="StatsContainer/HpProgress1"]
margin_right = 243.0
margin_bottom = 23.0
align = 1
valign = 1

[node name="ManaProgress" type="ProgressBar" parent="StatsContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 34.0
margin_right = -770.0
margin_bottom = -543.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="ManaText" type="Label" parent="StatsContainer/ManaProgress"]
margin_right = 243.0
margin_bottom = 23.0
align = 1
valign = 1

[node name="ItemsContainer" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = -116.0
margin_right = 124.0
margin_bottom = -26.0

[node name="ColorRect" type="ColorRect" parent="ItemsContainer"]
margin_right = 106.0
margin_bottom = 99.0
color = Color( 0.352941, 0.243137, 0.12549, 1 )

[node name="Potion" type="Sprite" parent="ItemsContainer"]
position = Vector2( 54, 50 )
scale = Vector2( 0.134399, 0.109917 )
texture = ExtResource( 2 )

[node name="PotionsAmount" type="Label" parent="ItemsContainer"]
margin_left = 5.0
margin_top = 80.0
margin_right = 15.0
margin_bottom = 96.0
text = "3"
valign = 2

[node name="ScoreContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="ScoreContainer"]
margin_left = 12.0
margin_top = 68.0
margin_right = 48.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 4 )
text = "00:00"

[node name="Timer" type="Timer" parent="ScoreContainer"]
autostart = true
script = ExtResource( 3 )

[node name="DeathsContainer" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Deaths" type="Sprite" parent="DeathsContainer"]
position = Vector2( 28, 126 )
scale = Vector2( 0.013, 0.01225 )
texture = ExtResource( 5 )

[node name="DeathsAmounts" type="Label" parent="DeathsContainer"]
margin_left = 47.0
margin_top = 111.0
margin_right = 62.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 5 )
text = "0"

[connection signal="timeout" from="ScoreContainer/Timer" to="ScoreContainer/Timer" method="_on_Timer_timeout"]
